--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -276,7 +276,7 @@
                 </li>
                         {% if request.user|user_belongs_to_group:'granjas' %}
                         <li class="nav-item" style="margin-bottom: 20px; margin-left: 10px;">
-                            <a href="{% url 'disponiblilidad' %}"  >
+                            <a href="{% url 'mortalidad' %}"  >
                                 <i class="nav-icon  fas fa-skull"></i>Mortalidad
                             </a>
                         </li>
