--- a/login/templates/mortalidad.html
+++ b/login/templates/mortalidad.html
@@ -148,7 +148,7 @@
                 <div class="form-group">
                     <label for="peso" class="col-lg-4 control-label">Peso:</label>
                     <div class="col-lg-4">
-                        <input class="form-control" required="" name="peso" type="number"
+                        <input class="form-control" required="" name="peso" type="float"
                             id="peso">
                     </div>
                 </div>
