--- a/login/templates/despacho_frigos.html
+++ b/login/templates/despacho_frigos.html
@@ -259,7 +259,7 @@
                                         <!-- Edad Promedio -->
                                         <div class="form-group">
                                             <label for="edadprom">Edad Promedio:</label>
-                                            <input type="text" class="form-control" id="edadprom" name="edadprom"
+                                            <input type="number" class="form-control" id="edadprom" name="edadprom"
                                                 required>
                                         </div>
 
